[package]
name = "p2p-file-sharing-enum-commands"
license = "MIT/Apache-2.0"
version = "0.2.3"
authors = ["Alexandr Zhukov <pridett2012@gmail.com>, Serhii Kocherha <serj911kocherga@gmail.com>"]
edition = "2018"
description = "Crate for containing common commands for client and daemon"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2"

[target.'cfg(unix)'.dependencies]
machine-ip = "0.2"
